<?xml version="1.0"?>
<package>
  <name>USB_Camera_Driver</name>
  <version>0.0.0</version>
  <description>The USB_Camera_Driver package</description>
  <maintainer email="Lauro199471@gmail.com">Lauro</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>eigen</run_depend>

  <export>
  </export>
</package>
